--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Print content
       run: ls -l
     
+    - name: Print content
+      run: ls -l Backend/
+
     - name: Tests usuaris
       run: python Backend/travudget/usuaris/tests.py
 
