--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -32,7 +32,7 @@ jobs:
         find . -type f -exec ls -l {} +
 
     - name: Tests usuaris
-      run: python /home/runner/work/Travudget/Travudget/Backend/usuaris/tests.py
+      run: python ./Backend/usuaris/tests.py
 
     - name: Tests viatges
       run: python viatges/tests.py
