--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -31,6 +31,12 @@ jobs:
       run: |
         find . -type f -exec ls -l {} +
 
+    - name: Print content
+      run: ls -l .
+
+    - name: Print content
+      run: ls -l ./Backend
+
     - name: Tests usuaris
       run: python ./Backend/usuaris/tests.py
 
