--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -35,7 +35,7 @@ jobs:
       run: ls -l .
 
     - name: Print content
-      run: ls -l Backend
+      run: ls -l /home/runner/work/Travudget/Travudget
 
     - name: Tests usuaris
       run: python ./Backend/usuaris/tests.py
