--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -23,11 +23,8 @@ jobs:
     - name: Install requirements
       run: pip install -r ./BackEnd/requirements.txt
     
-    - name: Set DJANGO_SETTINGS_MODULE
-      run: export DJANGO_SETTINGS_MODULE=travudget.settings
-    
     - name: Tests usuaris
-      run: python ./BackEnd/travudget/usuaris/tests.py
+      run: DJANGO_SETTINGS_MODULE=travudget.settings python ./BackEnd/travudget/usuaris/tests.py
 
     - name: Tests viatges
       run: python ./BackEnd/travudget/viatges/tests.py
