arreglant github actions

--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -25,6 +25,7 @@ jobs:
     
     - name: Tests usuaris
       run: |
+        ls -la ./BackEnd/travudget/usuaris
         cd ./BackEnd/travudget/usuaris/
         python tests.py
 
