--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -24,7 +24,7 @@ jobs:
       run: pip install -r ./BackEnd/requirements.txt
     
     - name: Tests usuaris
-      run: PYTHONPATH=./BackEnd/travudget python ./BackEnd/travudget/usuaris/tests.py
+      run: PYTHONPATH=./BackEnd/travudget:$PYTHONPATH python ./BackEnd/travudget/usuaris/tests.py
 
     - name: Tests viatges
       run: python ./BackEnd/travudget/viatges/tests.py
