--- a/FrontEnd/app/src/main/AndroidManifest.xml
+++ b/FrontEnd/app/src/main/AndroidManifest.xml
@@ -32,5 +32,14 @@
         <activity
             android:name=".Principal">
         </activity>
+        <activity
+            android:name=".CrearViatge">
+        </activity>
+        <activity
+            android:name=".Divises">
+        </activity>
+        <activity
+            android:name=".Viatge">
+        </activity>
     </application>
 </manifest>
