Editar viatge done

--- a/FrontEnd/app/src/main/AndroidManifest.xml
+++ b/FrontEnd/app/src/main/AndroidManifest.xml
@@ -41,5 +41,8 @@
         <activity
             android:name=".Viatge">
         </activity>
+        <activity
+            android:name=".ViatgeEditar">
+        </activity>
     </application>
 </manifest>
