--- a/FrontEnd/app/src/main/AndroidManifest.xml
+++ b/FrontEnd/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="com.travudget.travudget">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -16,6 +18,11 @@
         android:theme="@style/Theme.Travudget.NoActionBar"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -43,6 +50,18 @@
         </activity>
         <activity
             android:name=".ViatgeEditar">
+        </activity>
+        <activity
+            android:name=".CrearDespesa">
+        </activity>
+        <activity
+            android:name=".EditarDespesa">
+        </activity>
+        <activity
+            android:name=".VeureDespesa">
+        </activity>
+        <activity
+            android:name=".MapActivity">
         </activity>
     </application>
 </manifest>
