Filtrar despeses fet

--- a/FrontEnd/app/src/main/AndroidManifest.xml
+++ b/FrontEnd/app/src/main/AndroidManifest.xml
@@ -63,5 +63,8 @@
         <activity
             android:name=".MapActivity">
         </activity>
+        <activity
+            android:name=".FiltrarDespeses">
+        </activity>
     </application>
 </manifest>
