--- a/FrontEnd/app/src/main/AndroidManifest.xml
+++ b/FrontEnd/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Travudget"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Travudget.NoActionBar"
@@ -65,6 +65,12 @@
         </activity>
         <activity
             android:name=".FiltrarDespeses">
+        </activity>
+        <activity
+            android:name=".IntroduirCodi">
+        </activity>
+        <activity
+            android:name=".VeureViatge">
         </activity>
     </application>
 </manifest>
