Recompenses fetes all docs

--- a/FrontEnd/app/src/main/AndroidManifest.xml
+++ b/FrontEnd/app/src/main/AndroidManifest.xml
@@ -72,5 +72,8 @@
         <activity
             android:name=".VeureViatge">
         </activity>
+        <activity
+            android:name=".Recompenses">
+        </activity>
     </application>
 </manifest>
