Consultar informes fet

--- a/FrontEnd/app/src/main/AndroidManifest.xml
+++ b/FrontEnd/app/src/main/AndroidManifest.xml
@@ -75,5 +75,8 @@
         <activity
             android:name=".Recompenses">
         </activity>
+        <activity
+            android:name=".Informes">
+        </activity>
     </application>
 </manifest>
