Pagar deutes fet

--- a/FrontEnd/app/src/main/AndroidManifest.xml
+++ b/FrontEnd/app/src/main/AndroidManifest.xml
@@ -78,5 +78,8 @@
         <activity
             android:name=".Informes">
         </activity>
+        <activity
+            android:name=".Deutes">
+        </activity>
     </application>
 </manifest>
