--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -35,3 +35,13 @@ jobs:
       run: |
         cd ./BackEnd/travudget
         python -m viatges.tests
+
+    - name: Tests despeses
+      run: |
+        cd ./BackEnd/travudget
+        python -m despeses.tests
+
+    - name: Tests recompenses
+      run: |
+        cd ./BackEnd/travudget
+        python -m recompenses.tests
