--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -39,6 +39,7 @@ jobs:
     - name: Tests despeses
       run: |
         cd ./BackEnd/travudget
+        python -m viatges.tests
 
     - name: Tests recompenses
       run: |
